--- a/SI/login.html
+++ b/SI/login.html
@@ -43,51 +43,51 @@
     <div class="content">
         <div class="container mx-auto px-4 py-8">
             <div class="w-full mx-auto bg-white rounded-lg shadow-md p-12" style="max-width: 700px; height: 800px;">
-                <h1 class="text-3xl font-bold text-center mb-8 text-[#80B9E5]">Sign In</h1>
+                <h1 class="text-4xl font-bold text-center mb-8 text-[#80B9E5]">Sign In</h1>
                
 
-                <form class="space-y-4">
+                <form class="space-y-6">
                     <div>
-                        <label class="block text-gray-700 mb-2">Adresse mail ou nom d’utilisateur</label>
-                        <input type="text" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500">
+                        <label class="block text-gray-700 text-lg font-bold mb-2">Adresse mail ou nom d’utilisateur</label>
+                        <input type="text" class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:border-blue-500">
                     </div>
                     
                     <div>
-                        <label class="block text-gray-700 mb-2">Mot de passe</label>
-                        <input type="password" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500">
+                        <label class="block text-gray-700 text-lg font-bold mb-2">Mot de passe</label>
+                        <input type="password" class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:border-blue-500">
                     </div>
 
                     <div class="flex items-center justify-between">
-                        <a href="#" class="text-blue-600 text-sm">Mot de passe oublié</a>
+                        <a href="#" class="text-blue-600 text-sm font-bold">Mot de passe oublié</a>
                         <label class="flex items-center">
                             <input type="checkbox" class="mr-2">Se souvenir
                         </label>
                     </div>
 
-                    <button class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">
+                    <button class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition text-lg font-bold">
                         Se connecter
                     </button>
                 </form>
 
                 <div class="my-6 flex items-center">
                     <div class="flex-1 border-t"></div>
-                    <span class="px-4 text-gray-500">OU</span>
+                    <span class="px-4 text-gray-500 text-lg font-bold">OU</span>
                     <div class="flex-1 border-t"></div>
                 </div>
-            <div class="space-y-3">
-                <button class="w-full flex items-center justify-center gap-2 bg-blue-800 text-white py-2 rounded-lg">
+            <div class="space-y-4">
+                <button class="w-full flex items-center justify-center gap-2 bg-blue-800 text-white py-3 rounded-lg text-lg font-bold">
                     <i class="fab fa-facebook"></i>Continuer avec Facebook
                 </button>
-                <button class="w-full flex items-center justify-center gap-2 bg-sky-500 text-white py-2 rounded-lg">
+                <button class="w-full flex items-center justify-center gap-2 bg-sky-500 text-white py-3 rounded-lg text-lg font-bold">
                     <i class="fab fa-twitter"></i>Continuer avec Twitter
                 </button>
-                <button class="w-full flex items-center justify-center gap-2 bg-[#F27D0C] text-white py-2 rounded-lg">
+                <button class="w-full flex items-center justify-center gap-2 bg-[#F27D0C] text-white py-3 rounded-lg text-lg font-bold">
                     <i class="fab fa-google"></i>Continuer avec Google
                 </button>
             </div>
 
-            <p class="text-center mt-6">Vous n'avez pas de compte? </p>
-            <button onclick="window.location.href='signup.html'" class="w-full bg-white text-[#80B9E5] py-2 rounded-lg border border-[#80B9E5] hover:bg-gray-100 transition">
+            <p class="text-center mt-6 text-lg font-bold">Vous n'avez pas de compte? </p>
+            <button onclick="window.location.href='signup.html'" class="w-full bg-white text-[#80B9E5] py-3 rounded-lg border border-[#80B9E5] hover:bg-gray-100 transition text-lg font-bold">
                 S'inscrire
             </button>
         </div>
