--- a/SI/signup.html
+++ b/SI/signup.html
@@ -86,13 +86,20 @@
                     <button class="w-full flex items-center justify-center gap-2 bg-blue-800 text-white py-3 rounded-lg text-lg font-bold">
                         <i class="fab fa-facebook"></i> Continuer avec Facebook
                     </button>
-                    <button class="w-full flex items-center justify-center gap-2 bg-gray-600 text-white py-3 rounded-lg text-lg font-bold">
+                    <button class="w-full flex items-center justify-center gap-2 bg-sky-500 text-white py-3 rounded-lg text-lg font-bold">
                         <i class="fab fa-twitter"></i> Continuer avec Twitter
                     </button>
                     <button class="w-full flex items-center justify-center gap-2 bg-[#F27D0C] text-white py-3 rounded-lg text-lg font-bold">
                         <i class="fab fa-google"></i> Continuer avec Google
                     </button>
                 </div>
+                <div>
+                    <p class="text-center mt-6 text-lg font-bold">Avez-vous deja un compte? </p>
+                <button onclick="window.location.href='login.html'" class="w-full bg-white text-[#80B9E5] py-3 rounded-lg border border-[#80B9E5] hover:bg-gray-100 transition text-lg font-bold">
+                Se connecter    
+                </button>
+                </div>
+                
             </div>
         </div>
     </div>
