--- a/SI/signup.html
+++ b/SI/signup.html
@@ -70,7 +70,9 @@
                             <input type="password" class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:border-blue-500">
                             <i class="fa fa-lock absolute right-3 top-3 text-gray-400"></i>
                         </div>
-                        <p class="text-xs text-gray-500">Utilisez au moins 8 caractères combinant lettres, chiffres et symboles.</p>
+                        <div class="mt-5"></div>
+
+                        <p class="text-xm text-gray-500">Utilisez au moins 8 caractères combinant lettres, chiffres et symboles.</p>
                     </div>
                     
                     <button class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition text-lg font-bold">Créer un compte</button>
@@ -95,6 +97,8 @@
                 </div>
                 <div>
                     <p class="text-center mt-6 text-lg font-bold">Avez-vous deja un compte? </p>
+                    <div class="mt-5"></div>
+
                 <button onclick="window.location.href='login.html'" class="w-full bg-white text-[#80B9E5] py-3 rounded-lg border border-[#80B9E5] hover:bg-gray-100 transition text-lg font-bold">
                 Se connecter    
                 </button>
