--- a/SI/signup.html
+++ b/SI/signup.html
@@ -27,9 +27,12 @@
                 <h1 class="text-2xl font-bold text-[#80B9E5]">T9arnit</h1>
                 <div class="hidden md:flex items-center space-x-6">
                     <a href="#" class="hover:text-[#80B9E5]">Home</a>
-                    <a href="#" class="font-bold text-[#80B9E5]">Produits</a>
+                    <a href="#" class="hover:text-[#80B9E5]">Produits</a>
                     <a href="#" class="hover:text-[#80B9E5]">Services</a>
-                    <a href="#" class="hover:text-[#80B9E5]">Guide</a>
+                    <select class=" hover:text-[#80B9E5] focus:border-[#80B9E5] focus:ring-[#80B9E5]">
+                        <option value="fr">Français</option>
+                        <option value="en">English</option>
+                    </select>
                     <button class="bg-[#80B9E5] text-white px-4 py-2 rounded-lg hover:bg-[#6da3d1]">Achetez maintenant</button>
                 </div>
             </div>
