--- a/signup.html
+++ b/signup.html
@@ -24,12 +24,12 @@
     <nav class="bg-white shadow-lg">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
-                <h1 class="text-2xl font-bold text-[#80B9E5]">T9arnit</h1>
+                <h1 class="text-5xl font-bold text-[#2B4669]">T9arnit</h1>
                 <div class="hidden md:flex items-center space-x-6">
-                    <a href="#" class="hover:text-[#80B9E5]">Home</a>
-                    <a href="#" class="hover:text-[#80B9E5]">Produits</a>
-                    <a href="#" class="hover:text-[#80B9E5]">Services</a>
-                    <select class=" hover:text-[#80B9E5] focus:border-[#80B9E5] focus:ring-[#80B9E5]">
+                    <a href="#" class="text-xl hover:text-[#80B9E5]">Home</a>
+                    <a href="#" class="text-xl hover:text-[#80B9E5]">Produits</a>
+                    <a href="#" class="text-xl hover:text-[#80B9E5]">Services</a>
+                    <select class="text-xl hover:text-[#80B9E5] focus:border-[#80B9E5] focus:ring-[#80B9E5]">
                         <option value="fr">Français</option>
                         <option value="en">English</option>
                     </select>
@@ -78,7 +78,7 @@
                         <p class="text-xm text-gray-500">Utilisez au moins 8 caractères combinant lettres, chiffres et symboles.</p>
                     </div>
                     
-                    <button class="w-full bg-blue-600 text-white py-3 rounded-lg hover:bg-blue-700 transition text-lg font-bold">Créer un compte</button>
+                    <button class="w-full bg-[#80B9E5] text-white py-3 rounded-lg hover:bg-[#2B4669] transition text-lg font-bold">Créer un compte</button>
                 </form>
                 
                 <div class="my-6 flex items-center">
@@ -116,7 +116,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
-                    <h2 class="text-xl font-bold mb-4">T9arnit</h2>
+                    <h2 class="text-xl  font-bold mb-4">T9arnit</h2>
                     <p class="text-gray-400">Achetez plus intelligemment. Faites-vous livrer.</p>
                 </div>
                 <div>
