--- a/login.html
+++ b/login.html
@@ -25,13 +25,13 @@
         <nav class="bg-white shadow-lg">
             <div class="container mx-auto px-4">
                 <div class="flex justify-between items-center py-4">
-                    <h1 class="text-2xl font-bold text-[#80B9E5]">T9arnit</h1>
+                    <h1 class="text-5xl font-bold text-[#2B4669]">T9arnit</h1>
                     
                     <div class="hidden md:flex items-center space-x-6">
-                        <a href="#" class="hover:text-[#80B9E5]">Home</a>
-                        <a href="#" class=" hover:text-[#80B9E5]">Produits</a>
-                        <a href="#" class="hover:text-[#80B9E5]">Services</a>
-                        <select class="hover:text-[#80B9E5] focus:border-[#80B9E5] focus:ring-[#80B9E5]">
+                        <a href="#" class=" text-xl hover:text-[#80B9E5]">Home</a>
+                        <a href="#" class="text-xl hover:text-[#80B9E5]">Produits</a>
+                        <a href="#" class="text-xl hover:text-[#80B9E5]">Services</a>
+                        <select class="text-xl hover:text-[#80B9E5] focus:border-[#80B9E5] focus:ring-[#80B9E5]">
                             <option value="fr">Français</option>
                             <option value="en">English</option>
                         </select>
@@ -106,7 +106,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
-                    <h2 class="text-xl font-bold mb-4">T9arnit</h2>
+                    <h2 class="text-2xl  font-bold mb-4">T9arnit</h2>
                     <p class="text-gray-400">Achetez plus intelligemment. Faites-vous livrer.</p>
                 </div>
                 <div>
